--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 :root:root {
   --sl-font: 'Geist Sans', sans-serif;
   --sl-font-mono: 'Geist Mono', monospace;
-  --sl-color-bg-nav: var(--sl-color-bg);
+
+  --radius: 0.5rem;
+  /* --sl-color-bg-nav: var(--sl-color-bg);
   --sl-color-bg-sidebar: var(--sl-color-bg);
 
   --sl-border-radius-sm: 4px;
@@ -10,50 +12,94 @@
 
   --sl-color-accent-high: var(--sl-color-text-invert);
   --sl-black-accent-foreground: var(--sl-color-text-invert);
-  --sl-color-text-accent: var(--sl-color-text-invert);
+  --sl-color-text-accent: var(--sl-color-text-invert); */
 }
 
 :root[data-theme='dark'] {
-  --sl-color-bg: #09090b;
-
-  --sl-color-text-invert: hsl(0 0% 98%);
-  --sl-black-accent: hsl(240 3.7% 15.9%);
+  --background: 240 10% 3.9%;
+  --foreground: 0 0% 98%;
+  --card: 240 10% 3.9%;
+  --card-foreground: 0 0% 98%;
+  --popover: 240 10% 3.9%;
+  --popover-foreground: 0 0% 98%;
+  --primary: 0 0% 98%;
+  --primary-foreground: 240 5.9% 10%;
+  --secondary: 240 3.7% 15.9%;
+  --secondary-foreground: 0 0% 98%;
+  --muted: 240 3.7% 15.9%;
+  --muted-foreground: 240 5% 64.9%;
+  --accent: 240 3.7% 15.9%;
+  --accent-foreground: 0 0% 98%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 0 85.7% 97.3%;
+  --border: 240 3.7% 15.9%;
+  --input: 240 3.7% 15.9%;
+  --ring: 240 4.9% 83.9%;
 }
 
 :root[data-theme='light'] {
-  --sl-color-bg: #ffffff;
-
-  --sl-color-text-invert: hsl(240 10% 3.9%);
-  --sl-black-accent: hsl(240 4.8% 95.9%);
+  --background: 0 0% 100%;
+  --foreground: 240 10% 3.9%;
+  --card: 0 0% 100%;
+  --card-foreground: 240 10% 3.9%;
+  --popover: 0 0% 100%;
+  --popover-foreground: 240 10% 3.9%;
+  --primary: 240 5.9% 10%;
+  --primary-foreground: 0 0% 98%;
+  --secondary: 240 4.8% 95.9%;
+  --secondary-foreground: 240 5.9% 10%;
+  --muted: 240 4.8% 95.9%;
+  --muted-foreground: 240 3.8% 46.1%;
+  --accent: 240 4.8% 95.9%;
+  --accent-foreground: 240 5.9% 10%;
+  --destructive: 0 72.22% 50.59%;
+  --destructive-foreground: 0 0% 98%;
+  --border: 240 5.9% 90%;
+  --input: 240 5.9% 90%;
+  --ring: 240 5% 64.9%;
 }
 
-div.sidebar-pane a:hover,
-div.sidebar-pane a[aria-current='page'] {
-  background-color: var(--sl-black-accent);
-  color: var(--sl-black-accent-foreground);
+* {
+  border-color: hsl(var(--border));
+
+  scrollbar-width: thin;
+  scrollbar-color: hsl(var(--border)) transparent;
 }
 
-div.sidebar-pane {
-  border-inline-end: 1px solid var(--sl-black-accent);
+*,
+:after :before {
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
 }
 
-div.sidebar-pane a {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+html {
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  font-family: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
+  font-feature-settings: normal;
+  font-variation-settings: normal;
+  -webkit-tap-highlight-color: transparent;
 }
 
-.sl-link-button {
-  border-radius: var(--sl-border-radius-md);
-}
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-header.header {
-  border-bottom: 1px solid var(--sl-black-accent);
-}
+  font-family: var(--sl-font), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
 
-.right-sidebar {
-  border-inline-start: none;
-}
+  background-color: hsl(var(--background));
+  min-height: 100svh;
 
-.content-panel {
-  border-top: none !important;
+  overscroll-behavior: none;
+  color: hsl(var(--foreground));
+  font-synthesis-weight: none;
+  text-rendering: optimizeLegibility;
+
+  margin: 0;
+  line-height: inherit;
 }
