feat: add badge support to sidebar entries

--- a/src/overrides/SidebarSublist.astro
+++ b/src/overrides/SidebarSublist.astro
@@ -19,6 +19,7 @@ const { sublist, nested } = Astro.props
         {...entry.attrs}
       >
         {entry.label}
+        {entry.badge && <span class="entry-badge">{entry.badge.text}</span>}
       </a>
     ) : (
       <div class="container-sidebar-entry">
@@ -80,5 +81,18 @@ const { sublist, nested } = Astro.props
   .entry-link:hover {
     color: hsl(var(--accent-foreground));
     background-color: hsl(var(--accent));
+  }
+
+  .entry-badge {
+    color: rgb(0 0 0);
+    line-height: 1;
+    font-size: 0.75rem;
+    padding-top: 0.125rem;
+    padding-bottom: 0.125rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    background-color: rgb(173 250 29);
+    border-radius: calc(var(--radius) - 2px);
+    margin-left: 0.5rem;
   }
 </style>
