feat: add Hero component override and update layout structure

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,3 +95,82 @@ body {
   margin: 0;
   line-height: inherit;
 }
+
+.container-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  border-color: hsl(var(--border) / 0.3);
+  border-right-style: solid;
+  border-left-style: solid;
+}
+
+@media (min-width: 1800px) {
+  .container-wrapper {
+    max-width: 1536px;
+    border-left-width: 1px;
+    border-right-width: 1px;
+  }
+}
+
+html[data-theme='dark'] .container-wrapper {
+  border-color: hsl(var(--border));
+}
+
+.container-section {
+  border-color: hsl(var(--border) / 0.3);
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+}
+
+html[data-theme='dark'] .container-section {
+  border-color: hsl(var(--border));
+}
+
+@media (min-width: 1536px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    max-width: 1536px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1536px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100%;
+}
+
+.makrdown-wrapper:has(.container-section) {
+  padding-top: 0;
+  padding-bottom: 0;
+}
