--- a/src/overrides/PageFrame.astro
+++ b/src/overrides/PageFrame.astro
@@ -14,21 +14,21 @@ const { hasSidebar } = Astro.props
       </div>
     </header>
     <main class="main">
-      <div class="container-wrapper">
-        <div class:list={[hasSidebar && 'container container-wrapper-main']}>
-          {
-            hasSidebar ? (
+      {!hasSidebar && <slot />}
+
+      {
+        hasSidebar && (
+          <div class="container-wrapper">
+            <div class="container container-wrapper-main">
               <aside class="aside">
                 <slot name="sidebar" />
               </aside>
-            ) : (
-              <div />
-            )
-          }
 
-          <slot />
-        </div>
-      </div>
+              <slot />
+            </div>
+          </div>
+        )
+      }
     </main>
     <footer class="footer">
       <div class="container-wrapper">
@@ -81,70 +81,6 @@ const { hasSidebar } = Astro.props
 
   :global([data-theme='dark']) .layout__header {
     border-color: hsl(var(--border));
-  }
-
-  @media (min-width: 1800px) {
-    .container-wrapper {
-      max-width: 1536px;
-      border-left-width: 1px;
-      border-right-width: 1px;
-    }
-  }
-
-  .container-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    border-color: hsl(var(--border) / 0.3);
-    border-right-style: solid;
-    border-left-style: solid;
-  }
-
-  :global([data-theme='dark']) .container-wrapper {
-    border-color: hsl(var(--border));
-  }
-
-  @media (min-width: 1536px) {
-    .container {
-      padding-left: 1rem;
-      padding-right: 1rem;
-      max-width: 1536px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .container {
-      padding-left: 1.5rem;
-      padding-right: 1.5rem;
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .container {
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 640px) {
-    .container {
-      max-width: 640px;
-    }
-  }
-
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1536px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    width: 100%;
   }
 
   .container__header {
