--- a/src/overrides/Header.astro
+++ b/src/overrides/Header.astro
@@ -2,7 +2,7 @@
 import type { Props } from '@astrojs/starlight/props'
 import config from 'virtual:starlight/user-config'
 import Search from '@astrojs/starlight/components/Search.astro'
-import SocialIcons from '@astrojs/starlight/components/SocialIcons.astro'
+import SocialIcons from './SocialIcons.astro'
 import LanguageSelect from '@astrojs/starlight/components/LanguageSelect.astro'
 
 import ThemeSelect from './ThemeSelect.astro'
