--- a/src/overrides/ThemeSelect.astro
+++ b/src/overrides/ThemeSelect.astro
@@ -6,8 +6,9 @@ import type { Props } from '@astrojs/starlight/props'
   <button
     aria-label={Astro.locals.t('themeSelect.accessibleLabel')}
     aria-live="polite"
-    class="sl-flex"
+    class="sl-flex button"
     title={Astro.locals.t('themeSelect.accessibleLabel')}
+    data-variant="ghost"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -51,14 +52,6 @@ import type { Props } from '@astrojs/starlight/props'
 </starlight-theme-black-select>
 
 <style>
-  button {
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    height: 100%;
-  }
-
   svg {
     flex-shrink: 0;
     width: 1rem;
