--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,16 +1,51 @@
 ---
+import { AstroError } from 'astro/errors'
 import userConfig from 'virtual:starlight-theme-black-config'
+import starlightConfig from 'virtual:starlight/user-config'
+import { getRelativeLocaleUrl } from 'astro:i18n'
 
 const currentPath = Astro.url.pathname
+
+const defaultLang = starlightConfig.defaultLocale?.lang || starlightConfig.defaultLocale?.locale || 'en'
+
+function getTranslation(translations: Record<string, string>, link: string, description: string) {
+  const defaultTranslation = translations[defaultLang]
+
+  if (!defaultTranslation) {
+    throw new AstroError(
+      `The ${description} for "${link}" must have a key for the default language "${defaultLang}".`,
+      'Update the Starlight config to include a topic label for the default language.',
+    )
+  }
+
+  let translation = defaultTranslation
+
+  if (Astro.currentLocale) {
+    translation = translations[Astro.currentLocale] ?? defaultTranslation
+  }
+
+  return translation
+}
 ---
 
 <nav class="nav-bar">
   {
-    userConfig.navLinks?.map((link) => (
-      <a class:list={[{ active: currentPath === link.slug }]} href={link.slug}>
-        {link.text}
-      </a>
-    ))
+    userConfig.navLinks?.map((nav) => {
+      const absoluteLinkRegex = /^https?:\/\//
+
+      const link =
+        !absoluteLinkRegex.test(nav.link) && Astro.currentLocale
+          ? getRelativeLocaleUrl(Astro.currentLocale, nav.link)
+          : nav.link
+      const label = typeof nav.label === 'string' ? nav.label : getTranslation(nav.label, nav.link, 'label')
+
+      return (
+        <a class:list={[{ active: currentPath === link }]} href={link} {...nav.attrs}>
+          {label}
+          {nav.badge && <span class="badge">{nav.badge}</span>}
+        </a>
+      )
+    })
   }
 </nav>
 
@@ -44,5 +79,21 @@ const currentPath = Astro.url.pathname
 
   .nav-bar a.active {
     color: hsl(var(--foreground));
+  }
+
+  .badge {
+    padding-top: 0.125rem;
+    padding-bottom: 0.125rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    margin-left: 0.5rem;
+    border-radius: 0.375rem;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    text-decoration: none;
+    background: #adfa1d;
+    color: #000000;
   }
 </style>
