--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -8,7 +8,7 @@ const currentPath = Astro.url.pathname
 
 const defaultLang = starlightConfig.defaultLocale?.lang || starlightConfig.defaultLocale?.locale || 'en'
 
-function getTranslation(translations: Record<string, string>, link: string, description: string) {
+export function getTranslation(translations: Record<string, string>, link: string, description: string) {
   const defaultTranslation = translations[defaultLang]
 
   if (!defaultTranslation) {
