--- a/src/overrides/Hero.astro
+++ b/src/overrides/Hero.astro
@@ -1,7 +1,9 @@
 ---
 import { Image } from 'astro:assets'
 import type { Props } from '@astrojs/starlight/props'
-import { LinkButton } from '@astrojs/starlight/components'
+import LinkButton from '../components/LinkButton.astro'
+
+import ContainerSection from '../components/ContainerSection.astro'
 
 const { data } = Astro.props.entry
 const { title = data.title, tagline, image, actions = [] } = data.hero || {}
@@ -29,109 +31,84 @@ if (image) {
 }
 ---
 
-<div class="container-section">
-  <div class="container-wrapper">
-    <div class="container">
-      <div class="hero">
-        {darkImage && <Image src={darkImage} {...imageAttrs} class:list={{ 'light:sl-hidden': Boolean(lightImage) }} />}
-        {lightImage && <Image src={lightImage} {...imageAttrs} class="dark:sl-hidden" />}
-        {rawHtml && <div class="hero-html sl-flex" set:html={rawHtml} />}
-        <div class="sl-flex stack">
-          <div class="sl-flex copy">
-            <h1 id="_top" data-page-title set:html={title} />
-            {tagline && <div class="tagline" set:html={tagline} />}
-          </div>
-          {
-            actions.length > 0 && (
-              <div class="sl-flex actions">
-                {actions.map(({ attrs: { class: className, ...attrs } = {}, icon, link: href, text, variant }) => (
-                  <LinkButton {href} {variant} icon={icon?.name} class:list={[className]} {...attrs}>
-                    {text}
-                    {icon?.html && <Fragment set:html={icon.html} />}
-                  </LinkButton>
-                ))}
-              </div>
-            )
-          }
+<ContainerSection>
+  <div class="hero">
+    {darkImage && <Image src={darkImage} {...imageAttrs} class:list={{ 'light:sl-hidden': Boolean(lightImage) }} />}
+    {lightImage && <Image src={lightImage} {...imageAttrs} class="dark:sl-hidden" />}
+    {rawHtml && <div class="hero-html sl-flex" set:html={rawHtml} />}
+    <h1 class="title" id="_top" data-page-title set:html={title} />
+    {tagline && <div class="tagline" set:html={tagline} />}
+    {
+      actions.length > 0 && (
+        <div class="actions">
+          {actions.map(({ attrs: { class: className, ...attrs } = {}, icon, link: href, text, variant }) => (
+            <LinkButton {href} {variant} class:list={[className]} {...attrs}>
+              {text}
+              {icon?.html && <Fragment set:html={icon.html} />}
+            </LinkButton>
+          ))}
         </div>
-      </div>
-    </div>
+      )
+    }
   </div>
-</div>
+</ContainerSection>
 
 <style>
   .hero {
-    display: grid;
-    align-items: center;
-    gap: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .hero > img,
-  .hero > .hero-html {
-    object-fit: contain;
-    width: min(70%, 20rem);
-    height: auto;
-    margin-inline: auto;
-  }
-
-  .stack {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+    align-items: flex-start;
     flex-direction: column;
-    gap: clamp(1.5rem, calc(1.5rem + 1vw), 2rem);
-    text-align: center;
+    gap: 0.25rem;
   }
 
-  .copy {
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
+  @media (min-width: 1024px) {
+    .hero {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+    }
+  }
+  @media (min-width: 768px) {
+    .hero {
+      padding-top: 2.5rem;
+      padding-bottom: 2.5rem;
+    }
   }
 
-  .copy > * {
-    max-width: 50ch;
+  .title {
+    letter-spacing: -0.05em;
+    line-height: 1.25;
+    font-weight: 700;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
-
-  h1 {
-    font-size: clamp(var(--sl-text-3xl), calc(0.25rem + 5vw), var(--sl-text-6xl));
-    line-height: var(--sl-line-height-headings);
-    font-weight: 600;
-    color: var(--sl-color-white);
+  @media (min-width: 1024px) {
+    .title {
+      line-height: 1.1;
+    }
+  }
+  @media (min-width: 768px) {
+    .title {
+      font-size: 2.25rem;
+      line-height: 2.5rem;
+    }
   }
 
   .tagline {
-    font-size: clamp(var(--sl-text-base), calc(0.0625rem + 2vw), var(--sl-text-xl));
-    color: var(--sl-color-gray-2);
+    color: hsl(var(--foreground));
+    font-weight: 300;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    max-width: 42rem;
   }
 
   .actions {
-    gap: 1rem 2rem;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  @media (min-width: 50rem) {
-    .hero {
-      grid-template-columns: 7fr 4fr;
-      gap: 3%;
-      padding-block: clamp(2.5rem, calc(1rem + 10vmin), 10rem);
-    }
-
-    .hero > img,
-    .hero > .hero-html {
-      order: 2;
-      width: min(100%, 25rem);
-    }
-
-    .stack {
-      text-align: start;
-    }
-
-    .copy {
-      align-items: flex-start;
-    }
-
-    .actions {
-      justify-content: flex-start;
-    }
+    width: 100%;
+    padding-top: 0.5rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5rem;
   }
 </style>
