--- a/src/overrides/Pagination.astro
+++ b/src/overrides/Pagination.astro
@@ -22,14 +22,14 @@ const { prev, next } = pagination
         >
           <path d="m15 18-6-6 6-6" />
         </svg>
-        {Astro.locals.t('page.previousLink')}
+        {prev.label}
       </a>
     )
   }
   {
     next && (
       <a class="next" href={next.href} rel="next">
-        {Astro.locals.t('page.nextLink')}
+        {next.label}
 
         <svg
           xmlns="http://www.w3.org/2000/svg"
