feat: update PageTitle styles to use balanced text wrapping

--- a/src/overrides/PageTitle.astro
+++ b/src/overrides/PageTitle.astro
@@ -75,6 +75,6 @@ const {
     color: hsl(var(--muted-foreground));
     font-size: 1rem;
     line-height: 1.5rem;
-    white-space: nowrap;
+    text-wrap: balance;
   }
 </style>
