--- a/src/overrides/PageTitle.astro
+++ b/src/overrides/PageTitle.astro
@@ -1,9 +1,20 @@
 ---
-import type { Props } from '@astrojs/starlight/props'
+import type { Props as StarlightProps } from '@astrojs/starlight/props'
+
+export type Props = Omit<StarlightProps, 'entry'> & {
+  entry: StarlightProps['entry'] & {
+    data: StarlightProps['entry']['data'] & {
+      links?: {
+        doc: string
+        api: string
+      }
+    }
+  }
+}
 
 const {
   entry: {
-    data: { title, template, description },
+    data: { title, template, description, links },
   },
 } = Astro.props
 ---
@@ -32,6 +43,52 @@ const {
 
 <h1 id="_top">{title}</h1>
 {description && <p>{description}</p>}
+
+{
+  links && (
+    <div class="links">
+      {links.doc && (
+        <a href={links.doc} target="_blank" rel="noreferrer">
+          {Astro.locals.t('theme-black.links.doc')}
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="0.75rem"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M15 3h6v6" />
+            <path d="M10 14 21 3" />
+            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
+          </svg>
+        </a>
+      )}
+
+      {links.api && (
+        <a href={links.api} target="_blank" rel="noreferrer">
+          {Astro.locals.t('theme-black.links.api')}
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="0.75rem"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M15 3h6v6" />
+            <path d="M10 14 21 3" />
+            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
+          </svg>
+        </a>
+      )}
+    </div>
+  )
+}
 
 <style>
   .breadcrumb {
@@ -76,5 +133,36 @@ const {
     font-size: 1rem;
     line-height: 1.5rem;
     text-wrap: balance;
+  }
+
+  .links {
+    padding-top: 1rem;
+    align-items: center;
+    display: flex;
+  }
+
+  .links > a {
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 0.15s;
+    color: hsl(var(--secondary-foreground));
+    font-weight: 600;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    padding-top: 0.125rem;
+    padding-bottom: 0.125rem;
+    padding-left: 0.625rem;
+    padding-right: 0.625rem;
+    background-color: hsl(var(--secondary));
+    border-radius: calc(var(--radius) - 2px);
+    gap: 0.25rem;
+    align-items: center;
+    display: inline-flex;
+    text-decoration: inherit;
+  }
+
+  .links > a:not(:first-child) {
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
   }
 </style>
