--- a/src/overrides/Hero.astro
+++ b/src/overrides/Hero.astro
@@ -4,6 +4,7 @@ import type { Props } from '@astrojs/starlight/props'
 import LinkButton from '../components/LinkButton.astro'
 
 import ContainerSection from '../components/ContainerSection.astro'
+import { PAGE_TITLE_ID } from '../constants'
 
 const { data } = Astro.props.entry
 const { title = data.title, tagline, image, actions = [] } = data.hero || {}
@@ -36,7 +37,7 @@ if (image) {
     {darkImage && <Image src={darkImage} {...imageAttrs} class:list={{ 'light:sl-hidden': Boolean(lightImage) }} />}
     {lightImage && <Image src={lightImage} {...imageAttrs} class="dark:sl-hidden" />}
     {rawHtml && <div class="hero-html sl-flex" set:html={rawHtml} />}
-    <h1 class="title" id="_top" data-page-title set:html={title} />
+    <h1 class="title" id={PAGE_TITLE_ID} data-page-title set:html={title} />
     {tagline && <div class="tagline" set:html={tagline} />}
     {
       actions.length > 0 && (
