--- a/src/overrides/SiteTitle.astro
+++ b/src/overrides/SiteTitle.astro
@@ -1,9 +1,8 @@
 ---
-import type { Props } from '@astrojs/starlight/props'
 import config from 'virtual:starlight/user-config'
 import { logos } from 'virtual:starlight/user-images'
 
-const { siteTitle, siteTitleHref } = Astro.props
+const { siteTitle, siteTitleHref } = Astro.locals.starlightRoute
 ---
 
 <a href={siteTitleHref} class="site-title">
