--- a/src/overrides/TwoColumnContent.astro
+++ b/src/overrides/TwoColumnContent.astro
@@ -1,7 +1,5 @@
 ---
-import type { Props } from '@astrojs/starlight/props'
-
-const { toc } = Astro.props
+const { toc } = Astro.locals.starlightRoute
 ---
 
 {!toc && <slot />}
