feat: change vars to oklch

--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -6,14 +6,14 @@
 
 <style is:global>
   .callout {
-    color: hsl(var(--foreground));
+    color: var(--foreground);
     font-size: 0.875rem;
     line-height: 1.25rem;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    background-color: hsl(var(--muted) / 0.5);
+    background-color: color-mix(in oklab, var(--muted) 50%, transparent);
     border-width: 1px;
     border-radius: var(--radius);
     border-style: solid;
