--- a/src/components/Steps.astro
+++ b/src/components/Steps.astro
@@ -32,8 +32,8 @@
     justify-content: center;
     border-radius: 9999px;
     border-width: 4px;
-    border-color: hsl(var(--background));
-    background-color: hsl(var(--muted));
+    border-color: var(--background);
+    background-color: var(--muted);
     text-align: center;
     text-indent: -1px;
     font-size: 1rem;
