--- a/src/overrides/Hero.astro
+++ b/src/overrides/Hero.astro
@@ -96,7 +96,7 @@ if (image) {
   }
 
   .tagline {
-    color: hsl(var(--foreground));
+    color: var(--foreground);
     font-weight: 300;
     font-size: 1.125rem;
     line-height: 1.75rem;
