--- a/src/overrides/PageTitle.astro
+++ b/src/overrides/PageTitle.astro
@@ -81,7 +81,7 @@ const {
 
 <style>
   .breadcrumb {
-    color: hsl(var(--muted-foreground));
+    color: var(--muted-foreground);
     line-height: 1;
     font-size: 0.875rem;
     align-items: center;
@@ -102,7 +102,7 @@ const {
   }
 
   .text-foreground {
-    color: hsl(var(--foreground));
+    color: var(--foreground);
     margin-left: 0.5rem;
   }
 
@@ -118,7 +118,7 @@ const {
   p {
     margin: 0;
     margin-top: 0.5rem;
-    color: hsl(var(--muted-foreground));
+    color: var(--muted-foreground);
     font-size: 1rem;
     line-height: 1.5rem;
     text-wrap: balance;
@@ -134,7 +134,7 @@ const {
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 0.15s;
-    color: hsl(var(--secondary-foreground));
+    color: var(--secondary-foreground);
     font-weight: 600;
     font-size: 0.75rem;
     line-height: 1rem;
@@ -142,7 +142,7 @@ const {
     padding-bottom: 0.125rem;
     padding-left: 0.625rem;
     padding-right: 0.625rem;
-    background-color: hsl(var(--secondary));
+    background-color: var(--secondary);
     border-radius: calc(var(--radius) - 2px);
     gap: 0.25rem;
     align-items: center;
