--- a/src/overrides/Pagination.astro
+++ b/src/overrides/Pagination.astro
@@ -79,8 +79,8 @@ const { prev, next } = pagination
   }
 
   a:hover {
-    color: hsl(var(--accent-foreground));
-    background-color: hsl(var(--accent));
+    color: var(--accent-foreground);
+    background-color: var(--accent);
   }
 
   a > svg {
