--- a/src/components/LinkedCard.astro
+++ b/src/components/LinkedCard.astro
@@ -15,9 +15,9 @@ interface Props extends Omit<HTMLAttributes<'a'>, 'href'> {
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 0.15s;
-    color: hsl(var(--card-foreground));
+    color: var(--card-foreground);
     padding: 1.5rem;
-    background-color: hsl(var(--card));
+    background-color: var(--card);
     border-width: 1px;
     border-radius: calc(var(--radius) + 4px);
     border-style: solid;
@@ -29,7 +29,7 @@ interface Props extends Omit<HTMLAttributes<'a'>, 'href'> {
   }
 
   a:hover {
-    background-color: hsl(var(--muted) / 0.5);
+    background-color: color-mix(in oklab, var(--muted) 50%, transparent);
   }
 
   @media (min-width: 640px) {
