--- a/src/overrides/Search.astro
+++ b/src/overrides/Search.astro
@@ -168,7 +168,7 @@ if (project.trailingSlash === 'never') dataAttributes['data-strip-trailing-slash
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 0.15s;
-    color: hsl(var(--muted-foreground));
+    color: var(--muted-foreground);
     font-weight: 400;
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -176,8 +176,8 @@ if (project.trailingSlash === 'never') dataAttributes['data-strip-trailing-slash
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    background-color: hsl(var(--muted) / 0.5);
-    border-color: hsl(var(--input));
+    background-color: color-mix(in oklab, var(--muted) 50%, transparent);
+    border-color: var(--input);
     border-width: 1px;
     border-style: solid;
     border-radius: 0.5rem;
@@ -201,8 +201,8 @@ if (project.trailingSlash === 'never') dataAttributes['data-strip-trailing-slash
   }
 
   button[data-open-modal]:hover {
-    color: hsl(var(--accent-foreground));
-    background-color: hsl(var(--accent));
+    color: var(--accent-foreground);
+    background-color: var(--accent);
   }
 
   @media (min-width: 640px) {
@@ -239,7 +239,7 @@ if (project.trailingSlash === 'never') dataAttributes['data-strip-trailing-slash
     font-size: 10px;
     padding-left: 0.375rem;
     padding-right: 0.375rem;
-    background-color: hsl(var(--muted));
+    background-color: var(--muted);
     border-width: 1px;
     border-radius: 0.25rem;
     gap: 0.25rem;
