--- a/src/overrides/SocialIcons.astro
+++ b/src/overrides/SocialIcons.astro
@@ -3,18 +3,16 @@ import config from 'virtual:starlight/user-config'
 
 import { Icon } from '@astrojs/starlight/components'
 
-type Platform = keyof NonNullable<typeof config.social>
-type SocialConfig = NonNullable<NonNullable<typeof config.social>[Platform]>
-const links = Object.entries(config.social || {}) as [Platform, SocialConfig][]
+const links = config.social || []
 ---
 
 {
   links.length > 0 && (
     <>
-      {links.map(([platform, { label, url }]) => (
-        <a href={url} rel="me" class="sl-flex button" data-variant="ghost">
+      {links.map(({ label, href, icon }) => (
+        <a href={href} rel="me" class="sl-flex button" data-variant="ghost">
           <span class="sr-only">{label}</span>
-          <Icon name={platform} />
+          <Icon name={icon} />
         </a>
       ))}
     </>
