--- a/src/styles.css
+++ b/src/styles.css
@@ -102,7 +102,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  border-color: calc(var(--border) / 0.3);
+  border-color: color-mix(in oklab, var(--border) 30%, transparent);
   border-right-style: solid;
   border-left-style: solid;
 }
@@ -120,7 +120,7 @@ html[data-theme='dark'] .container-wrapper {
 }
 
 .container-section {
-  border-color: calc(var(--border) / 0.3);
+  border-color: color-mix(in oklab, var(--border) 30%, transparent);
   border-bottom-width: 1px;
   border-bottom-style: solid;
 }
