feat: update config to Starlight 0.34

--- a/src/overrides/MarkdownContent.astro
+++ b/src/overrides/MarkdownContent.astro
@@ -1,17 +1,9 @@
 ---
 import '@astrojs/starlight/style/markdown.css'
-import '../styles/mdx.css'
 ---
 
-<div class="makrdown-wrapper">
+<div class="markdown-wrapper">
   <div class="sl-markdown-content">
     <slot />
   </div>
 </div>
-
-<style>
-  .makrdown-wrapper {
-    padding-top: 2rem;
-    padding-bottom: 3rem;
-  }
-</style>
