--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -18,7 +18,7 @@
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
-    font-family: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    font-family: var(--sl-font), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
       'Segoe UI Symbol', 'Noto Color Emoji';
     font-feature-settings: normal;
     font-variation-settings: normal;
@@ -348,5 +348,18 @@
   .container-padding {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sl-banner {
+    border-radius: var(--radius);
+    margin-bottom: 1.5rem;
+    border-width: 1px;
+    border-color: var(--sl-color-banner-border);
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
