--- a/src/overrides/PageTitle.astro
+++ b/src/overrides/PageTitle.astro
@@ -38,7 +38,7 @@ const {
     <div class="links">
       {links.doc && (
         <a href={links.doc} target="_blank" rel="noreferrer">
-          {Astro.locals.t('theme-black.links.doc')}
+          {Astro.locals.t('black.links.doc')}
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="0.75rem"
@@ -58,7 +58,7 @@ const {
 
       {links.api && (
         <a href={links.api} target="_blank" rel="noreferrer">
-          {Astro.locals.t('theme-black.links.api')}
+          {Astro.locals.t('black.links.api')}
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="0.75rem"
